--- a/index.html
+++ b/index.html
@@ -4,6 +4,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-        <h1>Here will be kitties</h1>
-</body>
+    <!--Here will be kitties-->>
 </html>
