--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <!--Here will be kitties-->>
+        <h1>Here will be kitties</h1>
+        <img src="img/Gray_cat.png" alt="Cuttie cat"> 
+</body>
 </html>
