--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <header>
         <h1>Here will be kitties</h1>
-        <img src="img/Gray_cat.png" alt="Cuttie cat"> 
+        <img src="img/Gray_cat.png" alt="Cuttie cat">
+    </header>
 </body>
 </html>
