Added Angry cat img

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <header>
         <h1>Here will be kitties</h1>
         <img src="img/Gray_cat.png" alt="Cuttie cat">
+        <img src="img/images.jpeg" alt="Angry cat">
     </header>
 </body>
 </html>
